--- a/index.html
+++ b/index.html
@@ -4671,14 +4671,7 @@ var monthFormat = ["January", "February", "March", "April", "May", "June", "July
 <h3 class="intro-title">SUBSCRIBE YOUTUBE CHANNEL</h3>
 <p class="intro-snippet">You need to complete human verification to subscribe our channel</p>
 <div class="intro-action">
-                    <script type="text/javascript">
-                    var ilc = "https://dailytask.xyz/watchvideohd#Watch Video",
-                    ima = ilc.split("#"),
-                    ili = ima[0].trim(),
-                    ilt = ima[1].trim(),
-                    kod = "<a href="+ ili +">"+ ilt +"</a>";
-                    document.write(kod)
-                    </script><a href="https://doctoredits.com/1118035/eco">SUBSCRIBE NOW</a>
+                  <a href="https://doctoredits.com/1118035/eco">SUBSCRIBE NOW</a>
                   </div>
 </div>
 </div>
