--- a/index.html
+++ b/index.html
@@ -4624,8 +4624,8 @@ var monthFormat = ["January", "February", "March", "April", "May", "June", "July
 <div class="container row">
 <div class="header-logo section" id="header-logo" name="Header Logo"><div class="widget Header" data-version="2" id="Header1">
 <div class="header-widget">
-<a class="header-brand" href="https://watchvideoprime.blogspot.com/">
-<img alt="Watch Video HD" data-height="48" data-width="97" src="./SUB_files/sio-logo-png-transparent.png">
+<a class="header-brand" href="/">
+<img alt="SUBSCRIBE" data-height="48" data-width="97" src="./SUB_files/sio-logo-png-transparent.png">
 </a>
 </div>
 </div></div>
