--- a/signup.html
+++ b/signup.html
@@ -4672,6 +4672,11 @@ var monthFormat = ["January", "February", "March", "April", "May", "June", "July
 <p class="intro-snippet">Click Any Shop Now To Register</p>
 <div class="intro-action">
                   <a href="https://t.ly/rfXRI">SIGN UP NOW</a>
+  <div class="intro-action">
+                  <a href="https://cutt.ly/awlc6EuI">GET BONUS $20 NOW</a>
+                  </div>
+  <div class="intro-action">
+                  <a href="https://cutt.ly/kwlvqikV">GET BONUS $30 NOW</a>
                   </div>
 </div>
 </div>
