--- a/signup.html
+++ b/signup.html
@@ -4668,10 +4668,9 @@ var monthFormat = ["January", "February", "March", "April", "May", "June", "July
               <div class="intro-flex">
 <div class="container row">
 <div class="intro-content">
-<h3 class="intro-title">SIGN UP WEBSITE</h3>
-<p class="intro-snippet">Click Any Shop Now To Register</p>
+<h3 class="intro-title"></h3>
 <div class="intro-action">
-                  <a href="https://t.ly/rfXRI">SIGN UP NOW</a>
+                  <a href="https://cutt.ly/hwlV3rSO">SIGN UP NOW</a>
   <div class="intro-action">
                   <a href="https://cutt.ly/awlc6EuI">GET BONUS $20 NOW</a>
                   </div>
