--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0037)https://watchvideoprime.blogspot.com/ -->
 <html class="ltr" dir="ltr" xmlns="http://www.w3.org/1999/xhtml" xmlns:b="http://www.google.com/2005/gml/b" xmlns:data="http://www.google.com/2005/gml/data" xmlns:expr="http://www.google.com/2005/gml/expr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" name="viewport">
-<title>Watch Video HD</title>
+<title>Landing Page</title>
 
 <!-- Chrome, Firefox OS and Opera -->
 <meta content="#f8f8f8" name="theme-color">
