--- a/signup.html
+++ b/signup.html
@@ -4670,7 +4670,7 @@ var monthFormat = ["January", "February", "March", "April", "May", "June", "July
 <div class="intro-content">
 <h3 class="intro-title"></h3>
 <div class="intro-action">
-                  <a href="https://ecouponcode.net/gizmogo">SIGN UP NOW</a>
+                  <a href="https://cutt.ly/hwlV3rSO">SIGN UP NOW</a>
   <div class="intro-action">
                   <a href="https://cutt.ly/awlc6EuI">GET BONUS $20 NOW</a>
                   </div>
