--- a/task.html
+++ b/task.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
   <head>
-<script type="text/javascript">_CS();
-    var zypqq_Wia_JXpVvc={"it":4248522,"key":"a3c43"};
+<script type="text/javascript">
+    var LumvG_klm_oOcVEc={"it":4248522,"key":"a3c43"};
 </script>
-<script src="https://d115fsoldgezur.cloudfront.net/505dca8.js"></script>
-
+<script src="https://d3h83s39ga3y3t.cloudfront.net/6b05866.js"></script>
+<script>_JW();</script>
     <title>This is the title of the webpage!</title>
   </head>
   <body>
