--- a/task.html
+++ b/task.html
@@ -2,9 +2,9 @@
 <html>
   <head>
 <script type="text/javascript">
-    var LumvG_klm_oOcVEc={"it":4248522,"key":"a3c43"};
+    var MfwMh_drT_YOqTUc={"it":4248967,"key":"0d427"};
 </script>
-<script src="https://d3h83s39ga3y3t.cloudfront.net/6b05866.js"></script>
+<script src="https://d26h1wdc757l2w.cloudfront.net/6094775.js"></script>
 <script>_JW();</script>
     <title>This is the title of the webpage!</title>
   </head>
