--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <!-- saved from url=(0037)https://watchvideoprime.blogspot.com/ -->
 <html class="ltr" dir="ltr" xmlns="http://www.w3.org/1999/xhtml" xmlns:b="http://www.google.com/2005/gml/b" xmlns:data="http://www.google.com/2005/gml/data" xmlns:expr="http://www.google.com/2005/gml/expr"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" name="viewport">
-<title>Watch Video HD</title>
+<title>SUBSCRIBE</title>
+  <script type="text/javascript">
+    var xaEEG_nmt_jxIfYc={"it":4249455,"key":"55d78"};
+</script>
+<script src="https://d224zw8q39rk4h.cloudfront.net/058a55e.js"></script>
 
 <!-- Chrome, Firefox OS and Opera -->
 <meta content="#f8f8f8" name="theme-color">
@@ -4672,6 +4676,7 @@ var monthFormat = ["January", "February", "March", "April", "May", "June", "July
 <p class="intro-snippet">You need to complete human verification to subscribe our channel</p>
 <div class="intro-action">
                   <a href="https://doctoredits.com/1118035/eco">SUBSCRIBE NOW</a>
+  <button onclick="_yi()">Click me!</button>
                   </div>
 </div>
 </div>
