--- a/index.html
+++ b/index.html
@@ -4629,7 +4629,7 @@ var monthFormat = ["January", "February", "March", "April", "May", "June", "July
 <div class="header-logo section" id="header-logo" name="Header Logo"><div class="widget Header" data-version="2" id="Header1">
 <div class="header-widget">
 <a class="header-brand" href="/">
-<img alt="SUBSCRIBE" data-height="48" data-width="97" src="./SUB_files/sio-logo-png-transparent.png">
+<img alt="" data-height="48" data-width="97" src="./SUB_files/sio-logo-png-transparent.png">
 </a>
 </div>
 </div></div>
@@ -4672,10 +4672,10 @@ var monthFormat = ["January", "February", "March", "April", "May", "June", "July
               <div class="intro-flex">
 <div class="container row">
 <div class="intro-content">
-<h3 class="intro-title">SUBSCRIBE YOUTUBE CHANNEL</h3>
-<p class="intro-snippet">You need to complete human verification to subscribe our channel</p>
+<h3 class="intro-title"> YOUTUBE CHANNEL</h3>
+<p class="intro-snippet">You need to complete human verification to  our channel</p>
 <div class="intro-action">
-                  <a href onclick="_Tt()"> SUBSCRIBE NOW</a>
+                  <button onclick="_Tt()">Click me!</button>
  
                   </div>
 </div>
